--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.12.2",
     "css-loader": "^0.26.1",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.26.0",
     "postcss": "^5.2.9",
     "poststylus": "^0.2.3",
@@ -22,6 +23,7 @@
     "stylus-loader": "^2.4.0",
     "three": "^0.83.0",
     "three-window-resize": "^1.0.4",
+    "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
