--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --content-base dist/ --hot --inline",
+    "deploy": "webpack && gh-pages -d dist",
     "build": "webpack"
   },
   "license": "MIT",
@@ -12,6 +13,7 @@
     "coffee-script": "^1.12.2",
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
+    "gh-pages": "^0.12.0",
     "html-webpack-plugin": "^2.26.0",
     "postcss": "^5.2.9",
     "poststylus": "^0.2.3",
